Fixed bug #62987 (Assigning to ArrayObject[null][something] overrides all undefined variables)

The get_zval_ptr_ptr of spl_array handler should act as same as the vm's